# cut-video

./: .env.example  .gitignore  README.md  cli.py  hotwords.json  pyproject.toml
.qoder/repowiki/zh/content/: Python API参考.md  Web界面使用指南.md  命令行工具使用指南.md  字幕生成服务架构.md  开发者指南.md  快速开始.md  部署和运维指南.md  项目概述.md
.qoder/repowiki/zh/content/ASR转写服务架构/: ASR转写服务架构.md  ASR转写核心实现.md  时间戳解析算法.md  热词管理系统.md  音频提取与处理.md
.qoder/repowiki/zh/content/Web服务架构设计/: API端点设计.md  FastAPI应用结构.md  Web服务架构设计.md  状态管理系统.md
.qoder/repowiki/zh/content/前端界面架构设计/: CSS样式系统.md  HTML结构设计.md  JavaScript逻辑实现.md  前端界面架构设计.md
.qoder/repowiki/zh/content/数据模型和API参考/: 数据模型和API参考.md  核心数据模型.md
.qoder/repowiki/zh/content/数据模型和API参考/API端点参考/: API端点参考.md  时间戳数据API.md  视频上传API.md  视频下载API.md  视频剪辑API.md  转写状态查询API.md
.qoder/repowiki/zh/content/视频剪辑服务架构/: FFmpeg集成实现.md  视频剪辑服务架构.md  视频剪辑算法实现.md  视频处理工作流程.md
.qoder/repowiki/zh/meta/: repowiki-metadata.json
cut-video-web/: .env.example
cut-video-web/backend/: main.py
cut-video-web/backend/router/: __init__.py  cut.py  video.py
cut-video-web/backend/service/: cleanup.py  cutter.py  subtitle.py
cut-video-web/frontend/: app.js  index.html  package-lock.json  package.json  styles.css  vite.config.js
examples/: transcribe_example.py
src/: __init__.py  hotword.py  transcriber.py
